# pipeline-data-app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  demo.ipynb  new_download.ipynb  pyproject.toml  setup.cfg
docs/: index.html
docs/jenfi_pipeline_data_app/: app.html  db_models.html  index.html
docs/jenfi_pipeline_data_app/config/: db.html  index.html  s3.html
docs/jenfi_pipeline_data_app/db_cache/: cacher.html  db_cache.html  index.html
jenfi_pipeline_data_app/: __init__.py  app.py  db_models.py
jenfi_pipeline_data_app/app_funcs/: _db_handler.py  _exit_program.py  _models_s3.py  _parameters.py  _query.py  _trained_models.py
jenfi_pipeline_data_app/config/: db.py
jenfi_pipeline_data_app/db_cache/: cacher.py  db_cache.py
pipeline_data_app/: __init__.py  app.py  test_run.py
sagemaker/: model_deployment.ipynb  model_execution.ipynb  model_handler.py
tests/: _jupyter_faker.py  _pytest_all.py  pipeline_data_app_test.py  test_pipeline_data_app.py
tests/notebooks/: exit_insufficient_data.ipynb  exit_not_applicable.ipynb  write_result.ipynb
