[tool.poetry]
name = "jenfi-pipeline-data-app"
version = "0.4.0"
description = ""
readme = "README.md"
authors = ["Justin Louie <224840+nitsujri@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.13"
SQLAlchemy = "^2.0"
python-dotenv = "^1.0"
psycopg2 = "^2.9.3"
boto3 = "^1.24.78"
sqlparse = "^0.5.0"
scikit-learn = "^1.7"
statsmodels = "^0.14"
jupyterlab-git = "^0.51.0"

[tool.poetry.scripts]
pipeline-data-app = 'pipeline_data_app:main'

[tool.poetry.group.dev.dependencies]
pytest-env = "^1.0"
pre-commit = "^4.0"
pytest = "^8.0"
ruff = "^0.13.0"
pdoc3 = "^0.11"
papermill = "^2.4.0"
jupyterlab = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
  "D:PYTHON_ENV=test"
]
# addopts = "--capture='no'"
testpaths = ['tests']
